--- a/MiniDatabase/Content/CreateFields/FieldGeneric.xaml
+++ b/MiniDatabase/Content/CreateFields/FieldGeneric.xaml
@@ -17,7 +17,7 @@
     </Grid.RowDefinitions>
     <Button Grid.Column="0" Grid.Row="0" Margin="15" Click="createTextClick">Create text</Button>
     <Button Grid.Column="0" Grid.Row="1" Margin="15" Click="createIntClick">Create int value</Button>
-    <Button Grid.Column="1" Grid.Row="0" Margin="15" Click="createEnumClick" IsEnabled="False">Create enum</Button>
+    <Button Grid.Column="1" Grid.Row="0" Margin="15" Click="createEnumClick">Create enum</Button>
     <Button Grid.Column="1" Grid.Row="1" Margin="15" IsEnabled="False" >Create composite</Button>
     <Button Grid.Column="0" Grid.Row="2" Margin="15" Click="createDateClick">Create Date</Button>
     <Button Grid.Column="1" Grid.Row="2" Margin="15" IsEnabled="False">Create Image</Button>
