--- a/MiniDatabase/Records/InputControl/InputControlEnum.xaml
+++ b/MiniDatabase/Records/InputControl/InputControlEnum.xaml
@@ -4,5 +4,5 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="30" d:DesignWidth="300">
+             d:DesignHeight="30" d:DesignWidth="300" ItemsSource="{Binding Path=EnumContainer.Values}" MouseDoubleClick="testClick">
 </ComboBox>
